--- a/plugin.xml
+++ b/plugin.xml
@@ -20,7 +20,7 @@
     </engines>
 
     <platform name="android">
-        <dependency id="urbanairship-cordova" url="https://github.com/OutsystemsExperts/urbanairship-cordova.git#7.6.0-OS"/>
+        <dependency id="urbanairship-cordova" url="https://github.com/premedios/urbanairship-cordova.git"/>
         <hook src="hooks/install_prerequisites.js" type="before_plugin_install"/>
         <hook src="hooks/skip_google_services_hook.js" type="before_plugin_install"/>
         <hook src="hooks/handle_google_services.js" type="before_plugin_install"/>
