- Reverted back to OS repo for Android

--- a/plugin.xml
+++ b/plugin.xml
@@ -21,7 +21,7 @@
 
     <platform name="android">
         <!-- <dependency id="cordova-androidx-build" url="https://github.com/cmfsotelo/cordova-androidx-build.git#outsystems-compat"/> -->
-        <dependency id="urbanairship-cordova" url="https://github.com/premedios/urbanairship-cordova.git"/>
+        <dependency id="urbanairship-cordova" url="https://github.com/OutsystemsExperts/urbanairship-cordova.git#7.6.0-OS"/>
         <hook src="hooks/install_prerequisites.js" type="before_plugin_install"/>
         <hook src="hooks/skip_google_services_hook.js" type="before_plugin_install"/>
         <hook src="hooks/handle_google_services.js" type="before_plugin_install"/>
